fix spacing

--- a/src/sql/workbench/contrib/dashboard/browser/core/dashboardPage.css
+++ b/src/sql/workbench/contrib/dashboard/browser/core/dashboardPage.css
@@ -32,6 +32,7 @@ dashboard-page .actions-container .action-item .action-label{
 
 dashboard-page .actions-container .taskbarSeparator {
 	height: 14px;
+	margin-right: 16px;
 }
 
 dashboard-page .editor-toolbar {
